jumping menubar app/dashboard switch fix

--- a/djaoapp/static/css/custom.css
+++ b/djaoapp/static/css/custom.css
@@ -152,7 +152,7 @@ body
 
 .dashboard-header
 {
-    margin: 20px 0;
+    margin: 10px 0 20px;
     font-size: 16px;
 }
 
